<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    android:padding="20dp"
    >

    <TextView
        android:id="@+id/home_title"
        style="@style/Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_halo"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@id/home_sub_title"/>

    <TextView
        android:id="@+id/home_sub_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_selamat_datang"
        android:textAlignment="center"
        style="@style/SubTitle"
        app:layout_constraintBottom_toBottomOf="@id/home_title"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_sign_out"
        style="@style/ButtonGreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/btn_sign_out"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>